make serenity test pass + spock